Added basic example of state management using nanostore

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,12 @@ import { UserTable } from "../componenets/UserTable";
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
-		<h1>Astro</h1>
-		<UserForm client:visible />
-		<UserTable client:visible />
+	<body class="flex antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900">
+		<div class="flex-1">
+			<UserForm client:visible />
+		</div>
+		<div class="flex-1">
+			<UserTable client:visible />
+		</div>
 	</body>
 </html>
